[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "storage-engine"
version = "1.0.0"
description = "A first-principles, high-throughput in-memory database engine."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["benchmarks"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]